Bug 1997459: Remove 'overflow:hidden' styling on new-tab weather card, since it causes its own menu to be clipped in some cases. r=home-newtab-reviewers,dholbert,ini
Note that we've already been suppressing 'overflow:hidden' on this element
whenever the clicks the button to open the menu.  So if there were an issue
with this element having overflow, then it would have already been showing up
whenever the menu opens.  So I'm hoping that means there are no issues with
removing this style. :)

Differential Revision: https://phabricator.services.mozilla.com/D270895

UltraBlame original commit: 27b4491e368108708c7f867c829444317956ae18

--- a/browser/extensions/newtab/content-src/components/Weather/_Weather.scss
+++ b/browser/extensions/newtab/content-src/components/Weather/_Weather.scss
@@ -1523,10 +1523,6 @@ radius
 medium
 )
 ;
-overflow
-:
-hidden
-;
 &
 :
 hover
@@ -1574,17 +1570,6 @@ hidden
 ;
 }
 }
-}
-&
-:
-focus
--
-within
-{
-overflow
-:
-visible
-;
 }
 &
 :
