--- a/browser/extensions/newtab/css/activity-stream.css
+++ b/browser/extensions/newtab/css/activity-stream.css
@@ -26403,10 +26403,6 @@ radius
 medium
 )
 ;
-overflow
-:
-hidden
-;
 }
 .
 weatherCard
@@ -26465,18 +26461,6 @@ weatherSponsorText
 visibility
 :
 hidden
-;
-}
-.
-weatherCard
-:
-focus
--
-within
-{
-overflow
-:
-visible
 ;
 }
 .
